2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml: Bump add-in versions.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport/ToolboxService.cs: Make sure the toolbox is
	  filled the first time it is shown.
	* gtk-gui/gui.stetic: Updated.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.mdp, Makefile.am: Directory reorganization.

2007-11-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml, MonoDevelop.DesignerSupport.mdp,
	  Makefile.am,
	  MonoDevelop.DesignerSupport.Projects/CombineEntryDescriptor.cs,
	  MonoDevelop.DesignerSupport.Projects/CombineEntryPropertyProvider.cs,
	  MonoDevelop.DesignerSupport.Projects/ProjectReferenceDescriptor.cs,
	  MonoDevelop.DesignerSupport.Projects/ProjectFileDescriptor.cs,
	  MonoDevelop.DesignerSupport.Projects/ProjectItemPropertyProvider.cs,
	  MonoDevelop.DesignerSupport.Projects/ProjectsPropertyProvider.cs: Added
	  some property descriptors for references and CombineEntry.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/CodeBehindService.cs,
	  MonoDevelop.DesignerSupport/ToolboxService.cs,
	  MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Track LoggingService API
	  changes.

2007-11-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.PropertyGrid/PropertyGridTree.cs: Use a more
	  convenient color for grup headers.

2007-11-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport/BindingService.cs: Use RootCombine instead of
	  CurrentOpenCombine when possible.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml: Bump MD version.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.mdp: Project file names updated by change in
	  MD path functions.

2007-10-15  Michael Hutchinson <mhutchinson@novell.com> 
